semester cards are no longer misaligned

--- a/src/app/screens/home-screen/semester/semester.component.scss
+++ b/src/app/screens/home-screen/semester/semester.component.scss
@@ -1,6 +1,6 @@
 .semester {
     height: 150px;
-    display: inline-block;
+    display: inline-grid;
     width: 250px;
     margin: 10px;
     background-color: #B8B8B8;
